bugfix scrollbar

--- a/app/css/shared.css
+++ b/app/css/shared.css
@@ -177,25 +177,19 @@ margin: 20px;
 }
 
 .aboutpage {
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
   color: #fff;
 
   background-image: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%), url('../images/fond-about.png');
   
-   background-image: -webkit-gradient(
-linear,
-left top,
-left bottom,	
-color-stop(0.0, rgba(0,0,0,0)),
-color-stop(1.0, rgba(0,0,0,0.65))
-), url('../images/fond-about.png');
-  
-  
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,	
+    color-stop(0.0, rgba(0,0,0,0)),
+    color-stop(1.0, rgba(0,0,0,0.65))
+  ), url('../images/fond-about.png');
+    
   background-color: #2d2d2d;
-  position: absolute;
  
 }
 
@@ -424,18 +418,12 @@ li.mainitemlist.rows .preview img {
 	background-image: -webkit-linear-gradient(top, rgba(255,255,255,0.9)0%,rgba(194,194,194,0.7) 100%), url('../images/fond-calendar.png');
 	
 	 background-image: -webkit-gradient(
-linear,
-left top,
-left bottom,
-color-stop(0.0, rgba(255,255,255,0.9)),
-color-stop(1.0, rgba(194,194,194,0.7))
-), url('../images/fond-calendar.png');
-	
-	position: absolute;
-	bottom: 0;
-    left: 0;
-    right: 0;
-    top: 0;
+    linear,
+    left top,
+    left bottom,
+    color-stop(0.0, rgba(255,255,255,0.9)),
+    color-stop(1.0, rgba(194,194,194,0.7))
+    ), url('../images/fond-calendar.png');
 }
 
 .detailView .directory .picture {
